objects/Account_Satisfaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Management__c</fullName>
        <label>Account Management</label>
        <referenceTo>Customer_Success_Management__c</referenceTo>
        <relationshipLabel>Account Satisfaction</relationshipLabel>
        <relationshipName>Account_Satisfactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32678</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mood__c</fullName>
        <label>Mood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Satisfactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Plan__c</fullName>
        <label>Resolution Plan</label>
        <length>32678</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Satisfaction</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Account Satisfaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Satisfactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>